fix: z-index issue on navbar

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
   font-family: "Open Sans", sans-serif;
 }
 body {
+  padding-top: 100px;
   height: 100vh;
   width: 100%;
   background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
@@ -137,6 +138,7 @@ body {
     top: 75px;
     width: 100%;
     height: 100vh;
+    z-index: 1000;
     padding-top: 50px;
     background: #175d69;
     flex-direction: column;
